# NoteUSB

./: .gitignore  CMakeLists.txt  config.json
docs/: README.md  architecture.md  design_considerations.md  device_acquisition_api.md  device_acquisition_simulation.md  encryption_hotplug_progress.md  implementation_analysis.md  one_device_per_connection.md  refactor.md  streaming_thread.md  streaming_thread_design.md  streaming_thread_implementation_summary.md  streaming_thread_summary.md  summary.md  visual_comparison.md
include/: hid_constants.h
include/dro/: spsc-queue.hpp
include/note_usb/: device_handler.h  hid_streaming_thread.h  note_usb_session.h  session_manager.h
monitor/: CMakeLists.txt  main.cpp  note_usb_monitor.cpp
src/: device_discovery.cpp  device_handler.cpp  hid_streaming_thread.cpp  module.cpp  note_usb_session.cpp  session_manager.cpp
tests/: CMakeLists.txt  configuration_test.cpp  handler_registry_test.cpp  module_interface_test.cpp  test_main.cpp
